tests/rosetta/out/Erlang/100-doors-3.erl
#!/usr/bin/env escript
% Generated by Mochi compiler v0.10.26 on 2025-07-16T12:43:39Z
% 100-doors-3.erl - generated from 100-doors-3.mochi

main(_) ->
    Result0 = "",
    {J1, Result1} = lists:foldl(fun(I, {J, Result}) -> J0 = 1, (fun Loop0(J) -> case ((J * J) < I) of true -> J1 = (J + 1), Loop0(J1); _ -> ok end end)(J), (case ((J1 * J1) == I) of true -> Result1 = Result ++ "O"; _ -> Result1 = Result1 ++ "-" end), {J1, Result1} end, {J, Result0}, lists:seq(1, (101)-1)),
    io:format("~p~n", [Result1]).
